--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
   },
   "devDependencies": {
     "@sveltejs/vite-plugin-svelte": "^3.1.1",
+    "autoprefixer": "^10.4.20",
     "svelte": "^4.2.18",
+    "tailwindcss": "^3.4.9",
     "vite": "^5.4.0"
   }
 }
