--- a/package.json
+++ b/package.json
@@ -14,5 +14,8 @@
     "svelte": "^4.2.18",
     "tailwindcss": "^3.4.9",
     "vite": "^5.4.0"
+  },
+  "dependencies": {
+    "@supabase/supabase-js": "^2.45.1"
   }
 }
