--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "vite": "^5.4.0"
   },
   "dependencies": {
-    "@supabase/supabase-js": "^2.45.1"
+    "@supabase/supabase-js": "^2.45.1",
+    "firebase": "^10.13.0"
   }
 }
